--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,38 @@
-#title {
+body {
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: bold;
+  font-size: 3rem;
+}
+
+p {
+  color: #8f8f8f;
+}
+
+.colored-section {
   background-color: #ff4c68;
   color: white;
 }
 
-body {
-  font-family: 'Montserrat', sans-serif;
+.colored-section#testimonials, .colored-section#press {
+  background-color: #ef8172;
 }
 
-h1 {
-  font-weight: 900;
-  font-size: 3rem;
-  line-height: 1.5;
-}
-
-h2 {
-  font-weight: bold;
-  font-size: 3rem;
-  line-height: 1.5;
+.white-section {
+  background-color: white;
 }
 
 .container-fluid {
   padding: 3% 15% 7%;
+}
+
+/* Title Section */
+
+#title {
+  text-align: left;
 }
 
 .navbar {
@@ -38,14 +50,17 @@ h2 {
 
 .nav-link {
   font-size: 1.2rem;
-  font-family: "Montserrat";
 }
 
 .logo {
   width: 3rem;
 }
 
-.text-main {
+.title-header {
+  line-height: 1.5;
+}
+
+.text-main-container {
   padding-bottom: 5rem;
 }
 
@@ -54,76 +69,6 @@ h2 {
   transform: rotate(25deg);
   position: absolute;
   right: 30%;
-}
-
-/* Buttons */
-.download-button {
-  margin: 5% 3% 5% 0;
-}
-
-/* Feature Section */
-#features {
-  position: relative;
-  padding: 5rem 0;
-  text-align: center;
-  background-color: white;
-  z-index: 1;
-}
-
-.feature-icon {
-  color: #ef8172;
-  margin-bottom: 1rem;
-}
-
-.feature-icon:hover {
-  color: #ff4c68;
-}
-
-h3 {
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-
-p {
-  color: #8f8f8f;
-}
-
-/* Testimonial Section */
-#testimonials {
-  text-align: center;
-  background-color: #ef8172;
-  color: white;
-}
-
-.testimonial-image {
-  margin: 20px;
-  width: 10%;
-  border-radius: 50%;
-}
-
-.carousel-item {
-  padding: 7% 15%;
-}
-
-#press {
-  background-color: #ef8172;
-  text-align: center;
-  padding-bottom: 3%;
-}
-
-.press-logo {
-  width: 15%;
-  margin: 20px 20px 50px 20px;
-}
-
-/* Pricing Section */
-#pricing {
-  text-align: center;
-  padding: 100px;
-}
-
-.pricing-column {
-  padding: 3% 2%;
 }
 
 @media (max-width: 1030px) {
@@ -137,12 +82,70 @@ p {
   }
 }
 
-/* Call To Action Section */
-#cta {
-  text-align: center;
-  background-color: #ff4c68;
-  color: white;
+/* Buttons */
+.download-button {
+  margin: 5% 3% 5% 0;
 }
+
+/* Feature Section */
+#features {
+  position: relative;
+  padding: 5rem 0;
+  background-color: white;
+  z-index: 1;
+}
+
+.feature-icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+
+.feature-icon:hover {
+  color: #ff4c68;
+}
+
+.feature-header {
+  font-size: 1.5rem;
+}
+
+/* Testimonial Section */
+.testimonial-text {
+  line-height: 1.5;
+}
+
+.testimonial-image {
+  margin: 20px;
+  width: 10%;
+  border-radius: 50%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px 20px;
+}
+
+/* Pricing Section */
+
+#pricing {
+  padding: 100px;
+}
+
+.pricing-column {
+  padding: 3% 2%;
+}
+
+.pricing-plan {
+  font-size: 1.5rem;
+}
+
+@media (max-width: 500px) {
+  #pricing {
+    padding: 100px 0;
+  }
+}
+
+/* Call To Action Section */
+#cta {}
 
 .cta-header {
   font-size: 3rem;
@@ -151,16 +154,9 @@ p {
 
 /* Footer Section */
 #footer {
-  text-align: center;
   padding: 5% 0;
 }
 
 .footer-icon {
   margin: 0 0.65rem 1.5rem;
-}
-
-@media (max-width: 500px) {
-  #pricing {
-    padding: 100px 0;
-  }
 }
